# Build-Order-Factorio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  create_zip.sh  generator.sh
.cmake/api/v1/reply/: cache-v2-a689ab294fed6e9ac64c.json  cmakeFiles-v1-8c2f7361e8e0d29c03cd.json  codemodel-v2-89103c6f01679d735a9e.json  index-2021-03-06T13-34-14-0520.json  target-advpt_project-19c9001a8238ebf962c1.json
advpt_project.dir/Debug/advpt_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
doc/: GenericPlayerAlgorithmIdea.txt  Pseudocode.cpp
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/tree/: tree.hh
src/: main.cpp
src/headers/: BuildFactoryEvent.hpp  DestroyFactoryEvent.hpp  Event.hpp  Factory.hpp  GameEntity.hpp  Recipe.hpp  ResearchEvent.hpp  SolLoader.hpp  Solution.hpp  StartFactoryEvent.hpp  StopFactoryEvent.hpp  Technology.hpp  Utils.hpp  VictoryEvent.hpp
src/source/: BuildFactoryEvent.cpp  DestroyFactoryEvent.cpp  Event.cpp  Factory.cpp  GameEntity.cpp  Recipe.cpp  ResearchEvent.cpp  SolLoader.cpp  Solution.cpp  StartFactoryEvent.cpp  StopFactoryEvent.cpp  Technology.cpp  Utils.cpp  VictoryEvent.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
